RESOLVED FIXED18898
Dell.com popup menus are broken when page is scrolled
https://bugs.webkit.org/show_bug.cgi?id=18898
Summary Dell.com popup menus are broken when page is scrolled
Adam Treat
Reported 2008-05-05 15:22:48 PDT
Load dell.com with QtLauncher and scroll the horizontal scrollbar then mouse over the menu in middle of page. See rendering error.
Attachments
Fix for bug (1.23 KB, patch)
2008-05-05 15:23 PDT, Adam Treat
hausmann: review+
Adam Treat
Comment 1 2008-05-05 15:23:59 PDT
Created attachment 20975 [details] Fix for bug Attached patch fixes wrong transform in GraphicsContextQt.cpp
Simon Hausmann
Comment 2 2008-05-07 05:33:30 PDT
Landed in r32955
Tor Arne Vestbø
Comment 3 2008-05-07 07:41:50 PDT
*** Bug 18487 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.