2008-05-07  Adam Treat  <treat@kde.org>

Reviewed by Simon.

        https://bugs.webkit.org/show_bug.cgi?id=18898

        Fixed wrong transform being used for creating the pixmap for a new
        transparency layer. This fixes the popup menus on dell.com.


Canonical link: https://commits.webkit.org/26158@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@32955 268f45cc-cd09-0410-ab3c-d52691b4dbfc